# airbnb-regulations-check

./: .env_example  EDA-Vis-Initial.ipynb  README.md  Vis-EDA-Initial.ipynb  dump.py  pyproject.toml  scrap_listing_description.py
data/: airbnb_results.csv  listing_descriptions.jsonl
notebooks/: EDA-Vis-Initial.ipynb  data_insights.ipynb  license_number_extraction_gemini.ipynb  rapid_api_search_by_location.ipynb  test.ipynb
